# fast_gliner

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  Cargo.toml  README.md  Readme.md
.github/workflows/: release.yaml
bindings/python/: Cargo.toml  Makefile  README.md  pyproject.toml
bindings/python/py_src/fast_gliner/: __init__.py
bindings/python/src/: lib.rs  output.rs  pipeline.rs  schema.rs
doc/: Changelog.md
docs/: DEVELOPMENT.md  GLINER2_PIPELINE.md  GLINER2_RUNTIME.md  GLINER_OVERVIEW.md  MODEL_LOADING_REFACTOR.md  ROADMAP.md
gline-rs/: Cargo.toml  Readme.md
gline-rs/docs/: Changelog.md
gline-rs/examples/: benchmark_cpu.rs  benchmark_gpu.rs  gliner2_classification.rs  gliner2_extract.rs  gliner2_ner.rs  gliner2_pipeline.rs  gliner2_relations.rs  gliner_ner.rs  relation_extraction.rs
gline-rs/src/: lib.rs
gline-rs/src/model/: config.rs  mod.rs  params.rs  runtime.rs
gline-rs/src/model/gliner2/: classification.rs  decoder.rs  extraction.rs  mod.rs  model.rs  pipeline.rs  relations.rs  schema.rs  spans.rs  tokenizer.rs
gline-rs/src/model/input/: encoded.rs  mod.rs  prompt.rs  text.rs  tokenized.rs
gline-rs/src/model/input/relation/: mod.rs  schema.rs
gline-rs/src/model/input/tensors/: span.rs  token.rs
gline-rs/src/model/output/: mod.rs  relation.rs  tensors.rs
gline-rs/src/model/output/decoded/: greedy.rs  mod.rs  sort.rs  span.rs  token.rs  token_flat.rs
gline-rs/src/model/pipeline/: context.rs  mod.rs  relation.rs  span.rs  token.rs
gline-rs/src/text/: mod.rs  prompt.rs  span.rs  splitter.rs  token.rs  tokenizer.rs
gline-rs/src/util/: error.rs  mod.rs  result.rs
src/model/pipeline/: span.rs  token.rs
