[package]
name = "fast_gliner"
version = "0.1.5"
authors = ["Tal Almagor <almagoric@gmail.com>"]
readme = "README.md"
edition = "2021"

[lib]
name = "fast_gliner"
crate-type = ["cdylib"]

[dependencies]
orp = { version = "0.9.2", default-features = false, features = [] }
ort = { version = "2.0.0-rc.9", features = ["default"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_json = "1.0"
gline-rs = { path = "../../gline-rs" }
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"

[features]
default = ["pyo3/extension-module"]
cuda = ["orp/cuda", "ort/cuda"]

[tool.maturin]
bindings = "pyo3"
python-source = "py_src/fast_gliner"